[package]
name = "old-set"
version = "0.1.0"
authors = ["dragazo <37459229+dragazo@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
more-asserts = "0.2.1"
ordered-float = "1.0.2"
itertools = "0.9.0"
num = "0.3.0"
num_cpus = "1.13.0"
