[package]
name = "old-set"
version = "0.1.0"
authors = ["dragazo <37459229+dragazo@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
more-asserts = "0.3.1"
itertools = "0.10.5"
num = "0.4.0"
num_cpus = "1.15.0"
human-sort = "0.2.2"
